--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,8 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+@import "normalize";
+
 html {
     color: #222;
     font-size: 1em;
